<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_perception</name>
  <version>0.0.0</version>
  <description>Depth perception with gate-aware estimation</description>

  <maintainer email="ycchiu226@gmial.com">ycchiu226</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- msg generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- msg dependencies -->
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
